; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_file.c_mac_file_check_mmap.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_file.c_mac_file_check_mmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }
%struct.fileglob = type { i32 }

@file_check_mmap = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"file_check_mmap increased max protections\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_file_check_mmap(%struct.ucred* %0, %struct.fileglob* %1, i32 %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca %struct.ucred*, align 8
  %8 = alloca %struct.fileglob*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.ucred* %0, %struct.ucred** %7, align 8
  store %struct.fileglob* %1, %struct.fileglob** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  %15 = load i32*, i32** %12, align 8
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %14, align 4
  %17 = load i32, i32* @file_check_mmap, align 4
  %18 = load %struct.ucred*, %struct.ucred** %7, align 8
  %19 = load %struct.fileglob*, %struct.fileglob** %8, align 8
  %20 = load %struct.fileglob*, %struct.fileglob** %8, align 8
  %21 = getelementptr inbounds %struct.fileglob, %struct.fileglob* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* %11, align 4
  %26 = call i32 @MAC_CHECK(i32 %17, %struct.ucred* %18, %struct.fileglob* %19, i32 %22, i32 %23, i32 %24, i32 %25, i32* %14)
  %27 = load i32, i32* %14, align 4
  %28 = load i32*, i32** %12, align 8
  %29 = load i32, i32* %28, align 4
  %30 = or i32 %27, %29
  %31 = load i32*, i32** %12, align 8
  %32 = load i32, i32* %31, align 4
  %33 = icmp ne i32 %30, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %6
  %35 = call i32 @panic(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  br label %36

36:                                               ; preds = %34, %6
  %37 = load i32, i32* %14, align 4
  %38 = load i32*, i32** %12, align 8
  store i32 %37, i32* %38, align 4
  %39 = load i32, i32* %13, align 4
  ret i32 %39
}

declare dso_local i32 @MAC_CHECK(i32, %struct.ucred*, %struct.fileglob*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
